Updated readme,tests,swagger Added apiKeyCheck,rateLimiter
